Fixes navbrand display on small device.

--- a/xadmin/static/xadmin/css/xadmin.responsive.css
+++ b/xadmin/static/xadmin/css/xadmin.responsive.css
@@ -105,8 +105,11 @@
 .popover.dropdown-menu form > .btn {
   width: 100%;
 }
-.navbar-brand {
-  max-width: 300px;
+.navbar .navbar-brand {
+  max-width: 260px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .panel-content.nopadding {
